--- a/services/agents/reservation-agent/requirements.txt
+++ b/services/agents/reservation-agent/requirements.txt
@@ -8,3 +8,15 @@ httpx
 langchain
 langchain-openai
 python-dateutil
+
+# Testing dependencies
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.0.0
+pytest-httpx>=0.24.0
+
+# Code quality
+flake8>=6.0.0
+black>=23.0.0
+isort>=5.12.0
+mypy>=1.0.0
