[FIX/#17]: Azure OpenAI API 키 문제 해결 및 테스트 환경 개선
## 🔧 주요 수정사항

### 🛠️ Azure OpenAI API 키 문제 해결
- **지연 초기화**:  함수로 LLM 생성을 지연시켜 import 시점 오류 방지
- **테스트 환경 감지**: ,  환경 변수로 테스트 환경 구분
- **명시적 에러 처리**: API 키가 없을 때 명확한 에러 메시지 제공

### 🧪 테스트 환경 개선
- **conftest.py 추가**: FakeLLM, FakeExecutor로 테스트 모킹
- **조건부 executor 생성**:  함수로 테스트 환경에서 None 반환
- **chat_service 모킹**: executor가 None일 때 테스트용 응답 생성

### 🔄 GitHub Actions 개선
- **Secrets 사용**: 실제 Azure API 키를 GitHub Secrets에서 가져오도록 수정
- **환경 변수 설정**: 테스트와 통합 테스트에 필요한 환경 변수 추가
- **기본값 제공**: API 버전과 배포명에 기본값 설정

### 📝 코드 품질
- **에러 처리 개선**: API 키 누락 시 명확한 에러 메시지
- **테스트 안정성**: 외부 서비스 의존성 제거로 안정적인 테스트

## 🚀 해결된 문제
- ✅ GitHub Actions에서 Azure OpenAI API 키 오류 해결
- ✅ 테스트 환경에서 외부 API 호출 없이 테스트 가능
- ✅ 실제 환경에서는 정상적으로 Azure OpenAI 사용
- ✅ 단위 테스트 7개 모두 통과

Closes #17

--- a/.github/workflows/reservation-agent.yml
+++ b/.github/workflows/reservation-agent.yml
@@ -66,6 +66,13 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
+        env:
+          TESTING: "true"
+          PYTEST_CURRENT_TEST: "true"
+          AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
+          AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+          AZURE_OPENAI_DEPLOYMENT: ${{ secrets.AZURE_OPENAI_DEPLOYMENT || 'gpt-4o-mini' }}
+          AZURE_OPENAI_API_VERSION: ${{ secrets.AZURE_OPENAI_API_VERSION || '2024-12-01-preview' }}
         run: |
           cd ${{ env.SERVICE_PATH }}
           python -m pytest tests/ -v --cov=src --cov-report=xml --cov-report=html
@@ -171,16 +178,17 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run integration tests
+        env:
+          TESTING: "true"
+          PYTEST_CURRENT_TEST: "true"
+          DATABASE_URL: "postgresql://reservation_user:reservation_password@localhost:5432/reservation_db"
+          REDIS_URL: "redis://localhost:6379/0"
+          AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
+          AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+          AZURE_OPENAI_DEPLOYMENT: ${{ secrets.AZURE_OPENAI_DEPLOYMENT || 'gpt-4o-mini' }}
+          AZURE_OPENAI_API_VERSION: ${{ secrets.AZURE_OPENAI_API_VERSION || '2024-12-01-preview' }}
         run: |
           cd ${{ env.SERVICE_PATH }}
-          # 환경변수 설정 (테스트용)
-          export DATABASE_URL="postgresql://reservation_user:reservation_password@localhost:5432/reservation_db"
-          export REDIS_URL="redis://localhost:6379/0"
-          export AZURE_OPENAI_API_KEY="test-key"
-          export AZURE_OPENAI_ENDPOINT="https://test.openai.azure.com/"
-          export AZURE_OPENAI_DEPLOYMENT="test-deployment"
-          export AZURE_OPENAI_API_VERSION="2024-02-15-preview"
-          
           # 통합 테스트 실행
           python -m pytest tests/ -v -m "integration"
 
