--- a/services/agents/reservation-agent/pytest.ini
+++ b/services/agents/reservation-agent/pytest.ini
@@ -3,16 +3,18 @@ testpaths = tests
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
-addopts = 
+addopts =
     -v
     --tb=short
     --strict-markers
     --disable-warnings
+    --asyncio-mode=auto
 markers =
     unit: Unit tests
     integration: Integration tests
     slow: Slow running tests
     api: API tests
+asyncio_mode = auto
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
