--- a/services/agents/reservation-agent/pytest.ini
+++ b/services/agents/reservation-agent/pytest.ini
@@ -3,6 +3,7 @@ testpaths = tests
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
+asyncio_mode = auto
 addopts =
     -v
     --tb=short
@@ -14,7 +15,7 @@ markers =
     integration: Integration tests
     slow: Slow running tests
     api: API tests
-asyncio_mode = auto
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
+    ignore::pytest.PytestUnknownMarkWarning
