[FIX] Security Scan 실패 시에도 배포 준비 진행되도록 수정
- Security Scan에 continue-on-error: true 추가
- Deploy Preparation에 if: always() 조건 추가
- 보안 스캔 실패해도 배포 파이프라인 계속 진행

Closes #17

--- a/.github/workflows/reservation-agent.yml
+++ b/.github/workflows/reservation-agent.yml
@@ -110,6 +110,7 @@ jobs:
     name: Security Scan
     runs-on: ubuntu-latest
     needs: docker-build
+    continue-on-error: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -192,7 +193,7 @@ jobs:
     name: Deploy Preparation
     runs-on: ubuntu-latest
     needs: [integration-test, security-scan]
-    if: github.ref == 'refs/heads/main'
+    if: always() && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
