--- a/services/agents/reservation-agent/Dockerfile
+++ b/services/agents/reservation-agent/Dockerfile
@@ -51,4 +51,4 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/healthz || exit 1
 
 # 애플리케이션 실행
-CMD ["uvicorn", "reservation_agent.app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn reservation_agent.app:app --host 0.0.0.0 --port ${WEBSITES_PORT:-8000}"]
