--- a/.github/workflows/reservation-agent.yml
+++ b/.github/workflows/reservation-agent.yml
@@ -36,6 +36,8 @@ jobs:
         env:
           TESTING: "true"
           PYTEST_CURRENT_TEST: "true"
+          DATABASE_URL: "postgresql://test_user:test_password@localhost:5432/test_db"
+          REDIS_URL: "redis://localhost:6379/0"
           AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
           AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
           AZURE_OPENAI_DEPLOYMENT: ${{ secrets.AZURE_OPENAI_DEPLOYMENT || 'gpt-4o-mini' }}
