[FIX/#23]: Security Scan CI/CD 문제 수정
- Docker 이미지 경로 문제 수정 (image-ref 경로 단순화)
- CodeQL Action v2 → v3 업데이트 (deprecated 경고 해결)
- Security Scan 단계에서 Docker 이미지 재빌드 추가
- Trivy 스캔이 올바른 이미지를 찾을 수 있도록 수정

Closes #23

--- a/.github/workflows/reservation-agent.yml
+++ b/.github/workflows/reservation-agent.yml
@@ -117,15 +117,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image for security scan
+        run: |
+          cd ${{ env.SERVICE_PATH }}
+          docker build -t ${{ env.SERVICE_NAME }}:test .
+
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.SERVICE_PATH }}/${{ env.SERVICE_NAME }}:test
+          image-ref: ${{ env.SERVICE_NAME }}:test
           format: 'sarif'
           output: 'trivy-results.sarif'
 
       - name: Upload Trivy scan results
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
